fixed vertical line on sound therapy service showing up on small screens and temporarily stopped facebook showing up on small screens

--- a/styles.css
+++ b/styles.css
@@ -268,6 +268,18 @@ body {
   }
 }
 
+@media screen and (max-width: 36em) {
+  .priceborder {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 36em) {
+  .facebook {
+    display: none;
+  }
+}
+
 .fb-page {
     height 30em;
 }
